Add content for НА НОВЫЕ ОТНОШЕНИЯ

--- a/readings.html
+++ b/readings.html
@@ -1161,7 +1161,7 @@
                                 проверки состояния энергии.
                             </p>
                             <ul class="reading-questions">
-                                <li>Будет ли ближайший год встречи с человеком для серьёзных отношений?</li>
+                                <li>Будет ли в ближайший год встреча с человеком для серьёзных отношений?</li>
                                 <li>Обстоятельства встречи</li>
                                 <li>Описание человека</li>
                                 <li>Готовы ли вы к серьёзным отношениям?</li>
@@ -1199,6 +1199,73 @@
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                    </div>
+
+                </div>
+                <!-- Карусель раскладов про любовь - 6 - НА КАРЬЕРУ И ДЕНЬГИ -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА КАРЬЕРУ И ДЕНЬГИ</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
+
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- НА ФИНАНСЫ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                НА ФИНАНСЫ
+                            </h3>
+                            <p class="reading-lead">
+                                Показывает не только внешние воздействия (сглаз, порча, привязки), но и внутренние
+                                установки и убеждения, которые мешают реализации и гармонии. Подходит для первичной
+                                проверки состояния энергии.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Будет ли в ближайший год встреча с человеком для серьёзных отношений?</li>
+                                <li>Обстоятельства встречи</li>
+                                <li>Описание человека</li>
+                                <li>Готовы ли вы к серьёзным отношениям?</li>
+                                <li>Что вам мешает созданию серьёзных отношений? что вас сдерживает?</li>
+                                <li>Что поможет/приблизит вас к серьёзным отношениям?</li>
+                                <li>Если в вашем окружении человек, с которым можно построить отношения?</li>
+                                <li>Если да, в каких вы отношениях? если нет, как устроить эту встречу?</li>
+                                <li>Перспектива личной жизни ближайший год.</li>
+                                <li>Совет от карт</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- КАРЬЕРНЫЙ ОРИЕНТИР -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ККАРЬЕРНЫЙ ОРИЕНТИР
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Ваше нынешнее состояние</li>
+                                <li>Какая я в глазах мужчины?</li>
+                                <li>Моё ближайшее будущее в личной жизни</li>
+                                <li>Когда произойдёт встреча с мужчиной по судьбе?</li>
+                                <li>Как я узнаю его? (сигнификатор мужчины)</li>
+                                <li>Какими будут отношения?</li>
+                                <li>Что я должна о нём знать?</li>
+                                <li>Будет ли официальный брак?</li>
+                                <li>Совет</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
@@ -1335,6 +1402,103 @@
             </div>
         </section>
 
+
+
+        <!-- Блок 2: НА КАРЬЕРУ И ДЕНЬГИ -->
+        <section id="money-career" class="readings-section">
+            <div class="container">
+                <div class="readings-header">
+                    <h2 class="section-title">НА КАРЬЕРУ И ДЕНЬГИ</h2>
+                    <p class="readings-subtitle">
+                        Расклады, которые помогут разобраться с карьерой, финансами и делами.
+                    </p>
+                </div>
+                <!-- Карусель - НА КАРЬЕРУ И ДЕНЬГИ -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА КАРЬЕРУ И ДЕНЬГИ</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
+
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- НА ФИНАНСЫ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                НА ФИНАНСЫ
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li><strong>текущее состояние финансов: </strong>что сейчас происходит с моими деньгами?
+                                    эта карта показывает реальное положение дел, уровень финансовой стабильности и
+                                    динамику текущей ситуации.
+                                </li>
+                                причина проблем:
+                                <li><strong>причина проблем: </strong>что мешает мне финансово развиваться? объединяет
+                                    внутренние установки, убеждение и
+                                    внешние обстоятельства, которые создают препятствия</li>
+                                <li><strong>направление действия: </strong>в каком направлении стоит двигаться, чтобы
+                                    улучшить финансовое положение? подсказывает
+                                    какие шаги привычки или изменения принесут результат
+                                </li>
+                                <li><strong>потенциала заработка: </strong>какие возможности заработка у меня есть и как
+                                    их использовать? показывать где скрыт
+                                    доход потенциал для роста и способа его раскрытия.
+                                </li>
+                                <li><strong>скрытые ресурсы/возможности: </strong>что я пока не вижу, что может помочь
+                                    финансово? выявляет скрытые ресурсы, навыки, идеи,
+                                    людей или обстоятельства, на которые можно опереться
+                                </li>
+                                <li><strong>совет</strong></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- КАРЬЕРНЫЙ ОРИЕНТИР -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                КАРЬЕРНЫЙ ОРИЕНТИР
+                            </h3>
+                            <p class="reading-lead">
+                                <!--  -->
+                            </p>
+                            <ul class="reading-questions">
+                                <li><strong>перспективы на текущем месте:
+                                    </strong>что меня ждёт, eсли я останусь на текущей работе? показывает возможности
+                                    роста, плюсы и
+                                    ограничения текущей позиции</li>
+                                <li><strong>стоит ли менять сферу деятельности/работы: </strong>будет ли для меня
+                                    полезен переход на новое место работы или смена сферы? карта отражает
+                                    последствия, новые возможности риски изменения.</li>
+                                <li><strong>оптимальное направление для развития: </strong>куда лучше двигаться чтобы
+                                    реализовать свой потенциал? показывает подходящую сферу,
+                                    профессию или проект для роста и удовлетворения.</li>
+                                <li><strong>внутренние ресурсы /таланты: </strong>какие мои навыки и качества помогут
+                                    достичь успеха? карта выявляет сильные стороны,
+                                    которые можно использовать на текущей работе или при смене направления</li>
+                                <li><strong>внешние возможности/ поддержка: </strong>что или кто может помочь в
+                                    карьерном росте? показывает людей, связи, или обстоятельства,
+                                    которые способствуют продвижению</li>
+                                <li><strong>совет</strong></li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                    </div>
+
+                </div>
+            </div>
+        </section>
         <!-- Контакты (можешь взять из index) -->
         <section id="contact">
             <div class="container contact-grid">
