Add  new section

--- a/readings.html
+++ b/readings.html
@@ -1206,63 +1206,66 @@
                     </div>
 
                 </div>
-                <!-- Карусель раскладов про любовь - 6 - НА КАРЬЕРУ И ДЕНЬГИ -->
+                <!-- Карусель раскладов про любовь - 6 - НА КАРМИЧЕСКИЕ ОТНОШЕНИЯ -->
                 <div class="readings-carousel">
                     <div class="readings-carousel-header">
                         <button class="readings-nav-btn" type="button" data-dir="prev"
                             aria-label="Предыдущий расклад">‹</button>
-                        <div class="readings-carousel-title">НА КАРЬЕРУ И ДЕНЬГИ</div>
+                        <div class="readings-carousel-title">НА КАРМИЧЕСКИЕ ОТНОШЕНИ</div>
                         <button class="readings-nav-btn" type="button" data-dir="next"
                             aria-label="Следующий расклад">›</button>
                     </div>
 
                     <div class="readings-track" aria-label="Расклады про любовь">
-                        <!-- НА ФИНАНСЫ -->
+                        <!-- КАРМИЧЕСКИЕ ОТНОШЕНИЯ -->
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                НА ФИНАНСЫ
+                                КАРМИЧЕСКИЕ ОТНОШЕНИЯ
                             </h3>
                             <p class="reading-lead">
-                                Показывает не только внешние воздействия (сглаз, порча, привязки), но и внутренние
-                                установки и убеждения, которые мешают реализации и гармонии. Подходит для первичной
-                                проверки состояния энергии.
+                                Очень глубокий объёмный расклад для тех, кто находится в кармических отношениях и хочет
+                                понять, стоит ли развивать отношения дальше и как быстрее пройти уроки
                             </p>
                             <ul class="reading-questions">
-                                <li>Будет ли в ближайший год встреча с человеком для серьёзных отношений?</li>
-                                <li>Обстоятельства встречи</li>
-                                <li>Описание человека</li>
-                                <li>Готовы ли вы к серьёзным отношениям?</li>
-                                <li>Что вам мешает созданию серьёзных отношений? что вас сдерживает?</li>
-                                <li>Что поможет/приблизит вас к серьёзным отношениям?</li>
-                                <li>Если в вашем окружении человек, с которым можно построить отношения?</li>
-                                <li>Если да, в каких вы отношениях? если нет, как устроить эту встречу?</li>
-                                <li>Перспектива личной жизни ближайший год.</li>
-                                <li>Совет от карт</li>
+                                <li>Что происходит сейчас?</li>
+                                <li>Главная проблема обоих?</li>
+                                <li>Что вызвало негатив в отношениях?</li>
+                                <li>Что вас держит вместе?</li>
+                                <li>Что разобщает?</li>
+                                <li>Что можно сделать обоим, чтобы изменить ситуацию?</li>
+                                <li>Что ему нужно сделать, чтобы изменить ситуацию?</li>
+                                <li>Что вам нужно сделать, чтобы изменить ситуацию?</li>
+                                <li>Что сделать, чтобы сдвинуть и развить отношения?</li>
+                                <li>Что произойдёт само по себе, без вашего вмешательства, для роста отношений?</li>
+                                <li>Ближайшая перспективы взаимоотношений</li>
+                                <li>Перспективы в дальнейшем будущем</li>
+                                <li>В чём ваша кармическая задача прямо сейчас?</li>
+                                <li>В чём его кармическая задача прямо сейчас</li>
+                                <li>Совет</li>
                             </ul>
+
                             <p class="reading-meta">Формат: аудио-разбор</p>
-                            <p class="reading-price">4 000 ₽</p>
+                            <p class="reading-price">10 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
                         </article>
-                        <!-- КАРЬЕРНЫЙ ОРИЕНТИР -->
+                        <!-- ЖРИЦА -->
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                ККАРЬЕРНЫЙ ОРИЕНТИР
+                                ЖРИЦА
                             </h3>
                             <p class="reading-lead">
                                 <!--  -->
                             </p>
                             <ul class="reading-questions">
-                                <li>Ваше нынешнее состояние</li>
-                                <li>Какая я в глазах мужчины?</li>
-                                <li>Моё ближайшее будущее в личной жизни</li>
-                                <li>Когда произойдёт встреча с мужчиной по судьбе?</li>
-                                <li>Как я узнаю его? (сигнификатор мужчины)</li>
-                                <li>Какими будут отношения?</li>
-                                <li>Что я должна о нём знать?</li>
-                                <li>Будет ли официальный брак?</li>
-                                <li>Совет</li>
+                                <li>Для чего партнёр появился в вашей жизни?</li>
+                                <li>Являются ли отношения кармическими?</li>
+                                <li>Чему я должна научиться</li>
+                                <li>Почему я его (её) учу?</li>
+                                <li>Что скрывает?</li>
+                                <li>Почему? в чём причина?</li>
+                                <li>Перспектива отношений</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">4 000 ₽</p>
