Add new content section

--- a/readings.html
+++ b/readings.html
@@ -1276,38 +1276,62 @@
                     </div>
 
                 </div>
-                <!-- Карусель раскладов про любовь - 4 - НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ -->
+                <!-- Карусель раскладов про любовь - 7 - НА ЗАМУЖЕСТВО -->
                 <div class="readings-carousel">
                     <div class="readings-carousel-header">
                         <button class="readings-nav-btn" type="button" data-dir="prev"
                             aria-label="Предыдущий расклад">‹</button>
-                        <div class="readings-carousel-title">НА ПРОБЛЕМЫ В ОТНОШЕНИЯХ</div>
+                        <div class="readings-carousel-title">НА ЗАМУЖЕСТВО</div>
                         <button class="readings-nav-btn" type="button" data-dir="next"
                             aria-label="Следующий расклад">›</button>
                     </div>
 
                     <div class="readings-track" aria-label="Расклады про любовь">
-                        <!-- Расклады про любовь - 4 - УЙТИ ИЛИ ОСТАТЬСЯ -->
+                        <!-- Расклады про любовь - 7 - НА ЗНАКОМСТВО -->
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                УЙТИ ИЛИ ОСТАТЬСЯ
+                                НА ЗНАКОМСТВО
                             </h3>
                             <p class="reading-lead">
-                                <!--  -->
+                                Показывает не только внешние воздействия (сглаз, порча, привязки), но и внутренние
+                                установки и убеждения, которые мешают реализации и гармонии. Подходит для первичной
+                                проверки состояния энергии.
                             </p>
                             <ul class="reading-questions">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Будет ли в ближайший год встреча с человеком для серьёзных отношений?</li>
+                                <li>Обстоятельства встречи</li>
+                                <li>Описание человека</li>
+                                <li>Готовы ли вы к серьёзным отношениям?</li>
+                                <li>Что вам мешает созданию серьёзных отношений? что вас сдерживает?</li>
+                                <li>Что поможет/приблизит вас к серьёзным отношениям?</li>
+                                <li>Если в вашем окружении человек, с которым можно построить отношения?</li>
+                                <li>Если да, в каких вы отношениях? если нет, как устроить эту встречу?</li>
+                                <li>Перспектива личной жизни ближайший год.</li>
+                                <li>Совет от карт</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 7 ВЫЙДУ ЛИ Я ЗАМУЖ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ВЫЙДУ ЛИ Я ЗАМУЖ
+                            </h3>
+                            <p class="reading-lead">
+                                Расширенный расклад для тех, кто хотел бы узнать, есть ли будущий муж на пороге
+                            </p>
+                            <ul class="reading-questions">
+                                <li>Отношение к себе на момент сейчас (сигнификатор)</li>
+                                <li> Мнение противоположного пола обо мне</li>
+                                <li>Знаю ли я своего будущего мужа</li>
+                                <li>Обстоятельства, при которых будет встреча с ним</li>
+                                <li>Наличие/отсутствие обстоятельств, мешающих вступить в брак</li>
+                                <li>Вероятность вступления в брак в указанный срок (срок выбираете вы)</li>
+                                <li>Кто он? (главные черты характера)</li>
+                                <li>Совет</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">6 000 ₽</p>
